<resources>
    <string name="app_name">Audit</string>
    <string name="name">Name:</string>>
    <string name="ip">IP:</string>
    <string name="port">Port:</string>
    <string name="create">create</string>
    <string name="content_image_view">imageview</string>
    <string name="connect">Connect</string>
    <string name="save">save</string>
    <string name="no_admin">Whoops! your desktop application is not running as administrator :(</string>
    <string name="Hardware">Hardware</string>
    <string name="Ports">Ports</string>
    <string name="Processes">Processes</string>
    <string name="Network">Network</string>
    <string name="Upnp">Upnp devices</string>
    <string name="Firewall">Firewall</string>
    <string name="Vulnerabilities">Vulnerabilities</string>
    <string name="Audit">Malware scan</string>
    <string name="search">search</string>
    <string name="rescan">re-scan</string>
    <string name="input">inputs</string>
    <string name="outputs">outputs</string>
    <string name="execute">execute</string>
    <string name="cancel">Cancel</string>
    <string name="login">Login</string>
    <string name="password">password</string>
    <string name="warning">warning</string>
    <string name="firewall_incompatible">Whops!, your system is incompatible with this feature :(</string>
    <string name="actions">Actions</string>
    <string name="status">Status</string>
    <string name="next">next</string>
    <string name="update">update</string>
    <string name="warning_action">Disable firewall could affect your system by increasing risks against hacker\'s attacks</string>
    <string name="disable">disable</string>
    <string name="export">Export firewall settings</string>
    <string name="export_button">export</string>
    <string name="select_file">Select file to restore firewall settings</string>
    <string name="error_con">This action will produce application reset</string>
    <string name="rules">Firewall rules</string>
    <string name="delete">delete</string>
    <string name="create_fw_rule" />
    <string name="create_fw_new_rule">Create new firewall rule</string>
    <string name="policy">Policy:</string>
    <string name="change_policy">change policy</string>
    <string name="flush">flush</string>
    <string name="chains">Firewall chains</string>
    <string name="reload">Please, reload application to see changes</string>
    <string name="network">Network analysis</string>
    <string name="change">change graph</string>
    <string name="anomalies">Network anomalies</string>
    <string name="graph_input_size_time">Input | size/time</string>
    <string name="graph_output_size_time">Output | size/time</string>
    <string name="graph_input_size_port">Input | size/port</string>
    <string name="graph_output_size_port">Output | size/port</string>
    <string name="legend">Legend</string>
    <string name="abnormal_button">anomalies</string>
    <string name="size">Size:</string>
    <string name="hour">Hour:</string>
    <string name="Process">Process:</string>
    <string name="exception">add as exception</string>
    <string name="no_a_found">no anomalies found!</string>
    <string name="process_scanner">Memory processes scanner</string>
    <string name="file_scanner">File scanner</string>
    <string name="filename">filename</string>
    <string name="pid">Pid</string>
    <string name="process_name">Name</string>
    <string name="location">Location</string>
    <string name="path">Path</string>
    <string name="size_2">Size</string>
</resources>
