<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="wrap_content"
    android:layout_height="wrap_content"
    android:layout_centerHorizontal="true"
    android:layout_centerVertical="true">

    <TextView
        android:id="@+id/credential_dialog_title"
        android:layout_width="226dp"
        android:layout_height="36dp"
        android:layout_alignParentStart="true"
        android:layout_alignParentTop="true"
        android:layout_marginStart="36dp"
        android:layout_marginTop="10dp"
        android:text="@string/login"
        android:textAlignment="center"
        android:textSize="18sp"
        android:textStyle="bold" />

    <TextView
        android:id="@+id/credential_dialog_label_name"
        android:layout_width="225dp"
        android:layout_height="wrap_content"
        android:layout_alignEnd="@+id/credential_dialog_edit_name"
        android:layout_alignParentTop="true"
        android:layout_marginTop="55dp"
        android:layout_marginEnd="0dp"
        android:text="@string/name"
        android:textAlignment="center" />

    <EditText
        android:id="@+id/credential_dialog_edit_name"
        android:layout_width="227dp"
        android:layout_height="wrap_content"
        android:layout_alignStart="@+id/credential_dialog_title"
        android:layout_alignParentTop="true"
        android:layout_marginStart="-1dp"
        android:layout_marginTop="83dp"
        android:ems="10"
        android:inputType="textPersonName" />

    <TextView
        android:id="@+id/credential_dialog_label_password"
        android:layout_width="225dp"
        android:layout_height="wrap_content"
        android:layout_alignEnd="@+id/credential_dialog_edit_name"
        android:layout_alignParentTop="true"
        android:layout_marginTop="137dp"
        android:layout_marginEnd="0dp"
        android:text="@string/password"
        android:textAlignment="center" />

    <EditText
        android:id="@+id/credential_dialog_edit_password"
        android:layout_width="227dp"
        android:layout_height="wrap_content"
        android:layout_alignStart="@+id/credential_dialog_title"
        android:layout_alignParentTop="true"
        android:layout_marginStart="-1dp"
        android:layout_marginTop="165dp"
        android:ems="10"
        android:inputType="textPassword" />

    <TextView
        android:id="@+id/credential_error"
        android:layout_width="226dp"
        android:layout_height="36dp"
        android:layout_alignParentStart="true"
        android:layout_alignParentTop="true"
        android:layout_marginStart="36dp"
        android:layout_marginTop="220dp"
        android:textAlignment="center"
        android:textColor="@android:color/holo_red_light"
        android:textSize="18sp"
        android:textStyle="bold" />

    <Button
        android:id="@+id/credential_dialog_cancel_button"
        style="@style/Widget.AppCompat.Button.Colored"
        android:layout_width="99dp"
        android:layout_height="wrap_content"
        android:layout_alignParentStart="true"
        android:layout_alignParentTop="true"
        android:layout_marginStart="35dp"
        android:layout_marginTop="270dp"
        android:text="@string/cancel" />

    <Button
        android:id="@+id/credential_dialog_connect_button"
        style="@style/Widget.AppCompat.Button.Colored"
        android:layout_width="99dp"
        android:layout_height="wrap_content"
        android:layout_alignParentStart="true"
        android:layout_alignParentTop="true"
        android:layout_marginStart="161dp"
        android:layout_marginTop="270dp"
        android:backgroundTint="@color/colorPrimary"
        android:text="@string/connect" />

</RelativeLayout>