<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".activities.actionActivities.firewallActionsActivities.ChainActivity">

    <com.github.ybq.android.spinkit.SpinKitView
        android:id="@+id/chain_loader"
        android:layout_width="187dp"
        android:layout_height="78dp"
        android:layout_alignParentTop="true"
        android:layout_centerHorizontal="true"
        android:layout_marginTop="102dp"
        android:indeterminate="true"
        android:visibility="invisible"
        app:SpinKit_Color="@color/design_default_color_primary" />

    <TextView
        android:id="@+id/textView7"
        android:layout_width="133dp"
        android:layout_height="wrap_content"
        android:layout_alignParentStart="true"
        android:layout_alignParentTop="true"
        android:layout_alignParentEnd="true"
        android:layout_marginStart="144dp"
        android:layout_marginTop="20dp"
        android:layout_marginEnd="144dp"
        android:text="@string/chains"
        android:textAlignment="center"
        android:textStyle="bold" />

    <ListView
        android:id="@+id/chain_listView"
        android:layout_width="match_parent"
        android:layout_height="360dp"
        android:layout_alignParentStart="true"
        android:layout_alignParentTop="true"
        android:layout_alignParentEnd="true"
        android:layout_marginStart="10dp"
        android:layout_marginTop="67dp"
        android:layout_marginEnd="10dp" />

    <Button
        android:id="@+id/button_create_chain"
        style="@style/Widget.AppCompat.Button.Colored"
        android:layout_width="60dp"
        android:layout_height="wrap_content"
        android:layout_alignParentStart="true"
        android:layout_alignParentTop="true"
        android:layout_alignParentEnd="true"
        android:layout_marginStart="260dp"
        android:layout_marginTop="455dp"
        android:layout_marginEnd="10dp"
        android:backgroundTint="@color/colorPrimary"
        android:elevation="10dp"
        android:text="@string/create" />

    <EditText
        android:id="@+id/chain_name_edit"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_alignParentStart="true"
        android:layout_alignParentTop="true"
        android:layout_alignParentEnd="true"
        android:layout_marginStart="10dp"
        android:layout_marginTop="460dp"
        android:layout_marginEnd="160dp"
        android:ems="10"
        android:inputType="textPersonName" />

    <Button
        android:id="@+id/button_update_cahins"
        style="@style/Widget.AppCompat.Button.Colored"
        android:layout_width="200dp"
        android:layout_height="wrap_content"
        android:layout_alignParentStart="true"
        android:layout_alignParentTop="true"
        android:layout_alignParentEnd="true"
        android:layout_marginStart="10dp"
        android:layout_marginTop="505dp"
        android:layout_marginEnd="10dp"
        android:backgroundTint="@android:color/holo_orange_light"
        android:elevation="10dp"
        android:text="@string/update" />

    <TextView
        android:id="@+id/reload_text_view"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_alignParentTop="true"
        android:layout_centerHorizontal="true"
        android:layout_marginTop="300dp"
        android:text="@string/reload"
        android:textSize="18sp"
        android:textStyle="bold"
        android:visibility="gone" />

    <ImageView
        android:id="@+id/reload_image_view"
        android:layout_width="90dp"
        android:layout_height="90dp"
        android:layout_alignParentTop="true"
        android:layout_centerHorizontal="true"
        android:layout_marginTop="200dp"
        android:contentDescription="@string/content_image_view"
        android:scaleType="fitCenter"
        android:visibility="gone"
        app:srcCompat="@drawable/ic_warning" />

</RelativeLayout>