<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    xmlns:app="http://schemas.android.com/apk/res-auto">

    <android.support.v7.widget.CardView
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_alignParentStart="true"
        android:layout_alignParentTop="true"
        android:layout_alignParentEnd="true"
        android:layout_marginStart="0dp"
        android:layout_marginTop="0dp"
        android:layout_marginEnd="0dp"
        android:layout_marginBottom="10dp"
        app:cardElevation="10dp">

        <RelativeLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:paddingLeft="10dp"
            android:paddingTop="10dp"
            android:paddingRight="10dp"
            android:paddingBottom="10dp">

            <ImageView
                android:id="@+id/image_chain"
                android:layout_width="50dp"
                android:layout_height="50dp"
                android:layout_alignParentStart="true"
                android:layout_alignParentTop="true"
                android:layout_marginStart="10dp"
                android:layout_marginTop="10dp"
                android:contentDescription="@string/app_name"
                android:scaleType="fitCenter"
                android:src="@mipmap/ic_launcher"
                app:srcCompat="@drawable/ic_chain" />

            <TextView
                android:id="@+id/chain_policy"
                android:layout_width="169dp"
                android:layout_height="wrap_content"
                android:layout_alignParentStart="true"
                android:layout_alignParentTop="true"
                android:layout_marginStart="185dp"
                android:layout_marginTop="40dp"
                android:layout_marginBottom="5dp"
                android:textSize="18sp" />

            <TextView
                android:id="@+id/chain_name"
                android:layout_width="169dp"
                android:layout_height="wrap_content"
                android:layout_alignParentStart="true"
                android:layout_alignParentTop="true"
                android:layout_marginStart="185dp"
                android:layout_marginTop="10dp"
                android:layout_marginBottom="5dp"
                android:textSize="18sp" />

            <TextView
                android:id="@+id/textView6"
                android:layout_width="76dp"
                android:layout_height="wrap_content"
                android:layout_alignParentStart="true"
                android:layout_alignParentTop="true"
                android:layout_marginStart="106dp"
                android:layout_marginTop="10dp"
                android:layout_marginBottom="5dp"
                android:text="@string/name"
                android:textSize="18sp"
                android:textStyle="bold" />

            <TextView
                android:id="@+id/textView10"
                android:layout_width="78dp"
                android:layout_height="wrap_content"
                android:layout_below="@id/text_name"
                android:layout_alignParentStart="true"
                android:layout_marginStart="106dp"
                android:layout_marginTop="40dp"
                android:text="@string/policy"
                android:textSize="18sp"
                android:textStyle="bold" />

            <Button
                android:id="@+id/button_change_policy"
                style="@style/Widget.AppCompat.Button.Colored"
                android:layout_width="110dp"
                android:layout_height="55dp"
                android:layout_alignParentStart="true"
                android:layout_alignParentTop="true"
                android:layout_marginStart="5dp"
                android:layout_marginTop="90dp"
                android:backgroundTint="@android:color/holo_orange_light"
                android:elevation="10dp"
                android:text="@string/change_policy" />

            <Button
                android:id="@+id/button_flush"
                style="@style/Widget.AppCompat.Button.Colored"
                android:layout_width="110dp"
                android:layout_height="55dp"
                android:layout_alignParentStart="true"
                android:layout_alignParentTop="true"
                android:layout_marginStart="115dp"
                android:layout_marginTop="90dp"
                android:backgroundTint="@android:color/holo_blue_light"
                android:elevation="10dp"
                android:text="@string/flush"
                android:visibility="visible" />

            <Button
                android:id="@+id/button_chain_delete"
                style="@style/Widget.AppCompat.Button.Colored"
                android:layout_width="110dp"
                android:layout_height="55dp"
                android:layout_alignParentStart="true"
                android:layout_alignParentTop="true"
                android:layout_marginStart="225dp"
                android:layout_marginTop="90dp"
                android:backgroundTint="@android:color/holo_red_light"
                android:elevation="10dp"
                android:text="@string/delete"
                android:visibility="visible" />

        </RelativeLayout>
    </android.support.v7.widget.CardView>

</RelativeLayout>