<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:orientation="vertical"
    android:gravity="center"
    tools:context=".activities.actionActivities.yaraActivities.YaraScanActivity">

    <android.support.v7.widget.CardView
        android:id="@+id/card_file_scan"
        android:layout_width="350dp"
        android:layout_height="147dp"
        app:cardCornerRadius="10dp"
        app:cardElevation="20dp">

        <ImageView
            android:src="@drawable/processess_background"
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:contentDescription="@string/content_image_view"
            android:alpha="0.3"
            android:scaleType="centerCrop"/>

        <TextView
            android:id="@+id/textView9"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_gravity="center"
            android:layout_weight="1"
            android:text="@string/process_scanner"
            android:textSize="24sp"
            android:textStyle="bold" />

    </android.support.v7.widget.CardView>

    <android.support.v7.widget.CardView
        android:id="@+id/card_process_scan"
        android:layout_width="350dp"
        android:layout_height="147dp"
        android:layout_marginTop="30dp"
        app:cardCornerRadius="10dp"
        app:cardElevation="20dp" >

        <ImageView
            android:src="@drawable/file_background"
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:contentDescription="@string/content_image_view"
            android:alpha="0.3"
            android:scaleType="centerCrop"/>

        <TextView
            android:id="@+id/textView10"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_gravity="center"
            android:layout_weight="1"
            android:text="@string/file_scanner"
            android:textSize="24sp"
            android:textStyle="bold" />
    </android.support.v7.widget.CardView>
</LinearLayout>