<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".activities.actionActivities.firewallActionsActivities.Disable">

    <ImageView
        android:id="@+id/imageView2"
        android:layout_width="262dp"
        android:layout_height="220dp"
        android:layout_alignParentStart="true"
        android:layout_alignParentTop="true"
        android:layout_alignParentEnd="true"
        android:layout_marginStart="79dp"
        android:layout_marginTop="87dp"
        android:layout_marginEnd="79dp"
        android:contentDescription="@string/warning"
        android:scaleType="fitCenter"
        app:srcCompat="@drawable/ic_warning" />

    <TextView
        android:id="@+id/textView"
        android:layout_width="wrap_content"
        android:layout_height="94dp"
        android:layout_alignParentStart="true"
        android:layout_alignParentTop="true"
        android:layout_alignParentEnd="true"
        android:layout_marginStart="79dp"
        android:layout_marginTop="368dp"
        android:layout_marginEnd="79dp"
        android:text="@string/warning_action"
        android:textAlignment="center"
        android:textSize="18sp"
        android:textStyle="bold" />

    <Button
        android:id="@+id/button_disable_firewall"
        style="@style/Widget.AppCompat.Button.Colored"
        android:backgroundTint="@color/colorPrimary"
        android:elevation="20dp"
        android:layout_width="252dp"
        android:layout_height="wrap_content"
        android:layout_alignParentStart="true"
        android:layout_alignParentTop="true"
        android:layout_alignParentEnd="true"
        android:layout_marginStart="79dp"
        android:layout_marginTop="482dp"
        android:layout_marginEnd="79dp"
        android:text="@string/disable" />

    <com.github.ybq.android.spinkit.SpinKitView
        android:id="@+id/disable_fw_anim_load"
        android:layout_width="187dp"
        android:layout_height="78dp"
        android:layout_alignParentTop="true"
        android:layout_centerHorizontal="true"
        android:layout_marginTop="550dp"
        android:indeterminate="true"
        android:visibility="gone"
        app:SpinKit_Color="@color/design_default_color_primary" />

</RelativeLayout>