<?xml version="1.0" encoding="utf-8"?>
<android.support.constraint.ConstraintLayout
    xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    android:layout_width="match_parent"
    android:layout_height="match_parent">

    <TextView
        android:id="@+id/device_edit_name_text"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginStart="32dp"
        android:layout_marginTop="58dp"
        android:layout_marginEnd="21dp"
        android:text="@string/name"
        android:textSize="24sp"
        app:layout_constraintEnd_toStartOf="@+id/device_edit_name"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent" />

    <TextView
        android:id="@+id/device_edit_ip_text"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginStart="74dp"
        android:layout_marginTop="21dp"
        android:layout_marginEnd="21dp"
        android:text="@string/ip"
        android:textSize="24sp"
        app:layout_constraintEnd_toStartOf="@+id/device_edit_ip"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/device_edit_name_text" />

    <TextView
        android:id="@+id/device_edit_port_text"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginStart="50dp"
        android:layout_marginTop="18dp"
        android:layout_marginEnd="21dp"
        android:text="@string/port"
        android:textSize="24sp"
        app:layout_constraintEnd_toStartOf="@+id/device_edit_port"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/device_edit_ip_text" />

    <EditText
        android:id="@+id/device_edit_name"
        android:layout_width="237dp"
        android:layout_height="35dp"
        android:layout_marginStart="20dp"
        android:layout_marginTop="58dp"
        android:layout_marginEnd="25dp"
        android:layout_marginBottom="18dp"
        android:ems="10"
        android:inputType="textPersonName"
        android:textSize="14sp"
        app:layout_constraintBottom_toTopOf="@+id/device_edit_ip"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toEndOf="@+id/device_edit_name_text"
        app:layout_constraintTop_toTopOf="parent" />

    <EditText
        android:id="@+id/device_edit_ip"
        android:layout_width="237dp"
        android:layout_height="35dp"
        android:layout_marginStart="21dp"
        android:layout_marginTop="18dp"
        android:layout_marginEnd="25dp"
        android:ems="10"
        android:inputType="textPersonName"
        android:textSize="14sp"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toEndOf="@+id/device_edit_ip_text"
        app:layout_constraintTop_toBottomOf="@+id/device_edit_name" />

    <EditText
        android:id="@+id/device_edit_port"
        android:layout_width="237dp"
        android:layout_height="37dp"
        android:layout_marginStart="21dp"
        android:layout_marginTop="15dp"
        android:layout_marginEnd="24dp"
        android:ems="10"
        android:inputType="number"
        android:textSize="14sp"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toEndOf="@+id/device_edit_port_text"
        app:layout_constraintTop_toBottomOf="@+id/device_edit_ip" />

    <Button
        android:id="@+id/button_save"
        style="@style/Widget.AppCompat.Button.Colored"
        android:layout_width="209dp"
        android:layout_height="47dp"
        android:layout_marginStart="92dp"
        android:layout_marginTop="17dp"
        android:layout_marginEnd="81dp"
        android:layout_marginBottom="245dp"
        android:backgroundTint="@color/colorPrimary"
        android:elevation="20dp"
        android:text="@string/save"
        android:textSize="16sp"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/device_edit_port" />

</android.support.constraint.ConstraintLayout>