<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    android:layout_width="match_parent"
    android:layout_height="match_parent">

    <android.support.v7.widget.CardView
        android:layout_width="match_parent"
        android:layout_height="200dp"
        android:layout_alignParentStart="true"
        android:layout_alignParentTop="true"
        android:layout_alignParentEnd="true"
        android:layout_marginStart="0dp"
        android:layout_marginTop="0dp"
        android:layout_marginEnd="0dp"
        app:cardElevation="10dp">

        <RelativeLayout
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:paddingLeft="10dp"
            android:paddingTop="10dp"
            android:paddingRight="10dp"
            android:paddingBottom="10dp">

            <TextView
                android:id="@+id/measure_port"
                android:layout_width="300dp"
                android:layout_height="wrap_content"
                android:layout_alignParentStart="true"
                android:layout_alignParentTop="true"
                android:layout_alignParentEnd="true"
                android:layout_marginStart="102dp"
                android:layout_marginTop="10dp"
                android:layout_marginEnd="200dp"
                android:text="@string/port"
                android:textAlignment="viewStart"
                android:textSize="14sp"
                android:textStyle="bold" />

            <TextView
                android:id="@+id/measure_port_text"
                android:layout_width="300dp"
                android:layout_height="wrap_content"
                android:layout_alignParentStart="true"
                android:layout_alignParentTop="true"
                android:layout_alignParentEnd="true"
                android:layout_marginStart="200dp"
                android:layout_marginTop="10dp"
                android:layout_marginEnd="10dp"
                android:textAlignment="viewStart"
                android:textSize="14sp"
                android:textStyle="bold" />

            <TextView
                android:id="@+id/measure_size"
                android:layout_width="300dp"
                android:layout_height="wrap_content"
                android:layout_alignParentStart="true"
                android:layout_alignParentTop="true"
                android:layout_alignParentEnd="true"
                android:layout_marginStart="102dp"
                android:layout_marginTop="40dp"
                android:layout_marginEnd="200dp"
                android:text="@string/size"
                android:textAlignment="viewStart"
                android:textSize="14sp"
                android:textStyle="bold" />

            <TextView
                android:id="@+id/measure_size_text"
                android:layout_width="300dp"
                android:layout_height="wrap_content"
                android:layout_alignParentStart="true"
                android:layout_alignParentTop="true"
                android:layout_alignParentEnd="true"
                android:layout_marginStart="200dp"
                android:layout_marginTop="40dp"
                android:layout_marginEnd="10dp"
                android:textAlignment="viewStart"
                android:textSize="14sp"
                android:textStyle="bold" />

            <TextView
                android:id="@+id/measure_hour"
                android:layout_width="300dp"
                android:layout_height="wrap_content"
                android:layout_alignParentStart="true"
                android:layout_alignParentTop="true"
                android:layout_alignParentEnd="true"
                android:layout_marginStart="102dp"
                android:layout_marginTop="70dp"
                android:layout_marginEnd="200dp"
                android:text="@string/hour"
                android:textAlignment="viewStart"
                android:textSize="14sp"
                android:textStyle="bold" />

            <TextView
                android:id="@+id/measure_hour_text"
                android:layout_width="300dp"
                android:layout_height="wrap_content"
                android:layout_alignParentStart="true"
                android:layout_alignParentTop="true"
                android:layout_alignParentEnd="true"
                android:layout_marginStart="200dp"
                android:layout_marginTop="70dp"
                android:layout_marginEnd="10dp"
                android:textAlignment="viewStart"
                android:textSize="14sp"
                android:textStyle="bold" />

            <TextView
                android:id="@+id/measure_process"
                android:layout_width="300dp"
                android:layout_height="wrap_content"
                android:layout_alignParentStart="true"
                android:layout_alignParentTop="true"
                android:layout_alignParentEnd="true"
                android:layout_marginStart="102dp"
                android:layout_marginTop="100dp"
                android:layout_marginEnd="200dp"
                android:text="@string/Process"
                android:textAlignment="viewStart"
                android:textSize="14sp"
                android:textStyle="bold" />

            <TextView
                android:id="@+id/measure_process_text"
                android:layout_width="300dp"
                android:layout_height="wrap_content"
                android:layout_alignParentStart="true"
                android:layout_alignParentTop="true"
                android:layout_alignParentEnd="true"
                android:layout_marginStart="200dp"
                android:layout_marginTop="100dp"
                android:layout_marginEnd="10dp"
                android:textAlignment="viewStart"
                android:textSize="14sp"
                android:textStyle="bold" />

            <Button
                android:id="@+id/add_exception_button"
                style="@style/Widget.AppCompat.Button.Colored"
                android:layout_width="211dp"
                android:layout_height="wrap_content"
                android:layout_alignParentStart="true"
                android:layout_alignParentTop="true"
                android:layout_alignParentEnd="true"
                android:layout_marginStart="90dp"
                android:layout_marginTop="130dp"
                android:layout_marginEnd="90dp"
                android:backgroundTint="@android:color/holo_red_light"
                android:elevation="10dp"
                android:text="@string/exception" />

            <ImageView
                android:id="@+id/imageView_anomaly"
                android:layout_width="69dp"
                android:layout_height="59dp"
                android:layout_alignParentStart="true"
                android:layout_alignParentTop="true"
                android:layout_alignParentBottom="true"
                android:layout_marginStart="10dp"
                android:layout_marginTop="10dp"
                android:layout_marginBottom="60dp"
                android:contentDescription="@string/next"
                app:srcCompat="@drawable/ic_alarm" />
        </RelativeLayout>

    </android.support.v7.widget.CardView>

</RelativeLayout>